--- a/project.ipynb
+++ b/project.ipynb
@@ -4,28 +4,68 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d888b3cc",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hello world\")"
+    "!pip install transformers datasets evaluate"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "099e7945",
+   "id": "5c84a295",
    "metadata": {},
    "source": [
-    "conda create --name myenv python=3.10"
+    "# Load Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85f5fc7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "# Load dataset\n",
+    "dataset = load_dataset(\"gsm8k\", \"main\")\n",
+    "\n",
+    "# See examples\n",
+    "print(\"Train size:\", len(dataset['train']))\n",
+    "print(\"Test size:\", len(dataset['test']))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "835d9291",
+   "metadata": {},
+   "source": [
+    "See an example of the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9496cbeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "sample = dataset['train'][0]\n",
+    "print(\"Question:\", sample['question'])\n",
+    "print(\"Answer:\", sample['answer'])\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "myenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
