Implemented phi3 model

--- a/Finalgpt2.ipynb
+++ b/Finalgpt2.ipynb
@@ -12,6 +12,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 1. Instalation and import packages"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -276,6 +283,18 @@
         "    TrainingArguments,\n",
         ")\n",
         "import evaluate"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 2. Loading and Splitting the Dataset\n",
+        " - We load the gsm8k dataset which contains grade-school math word problems:\n",
+        "\n",
+        "- The official training split is splitt into 80% training and 10% validation sets.\n",
+        "\n",
+        "- The provided test set is kept as is for final evaluation."
       ]
     },
     {
