--- a/phiModel/phi.ipynb
+++ b/phiModel/phi.ipynb
@@ -18,7 +18,9 @@
         "10. Make normal predictions\n",
         "11. Make chain-of-thought (COT) predictions\n",
         "12. Save predictions to a .json file\n",
-        "13. Extract subsets with 100% correct predictions"
+        "13. Extract subsets with 100% correct predictions\n",
+        "\n",
+        "Tu código en phi.ipynb realiza el fine-tuning del modelo phi usando un dataset modificado, y luego genera predicciones en dos modalidades: zero-shot (sin ejemplos ni razonamiento en el prompt) y few-shot con chain-of-thought (usando ejemplos y razonamiento). Sin embargo, todas esas predicciones se hacen con el modelo fine-tuned, y en ningún momento se evalúa el modelo base original (microsoft/phi-1_5) sin entrenamiento adicional, lo cual es necesario para comparar mejoras en desempeño."
       ]
     },
     {
