--- a/phiModel/phiRerunWithJsonFile2.ipynb
+++ b/phiModel/phiRerunWithJsonFile2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "95ccbcca",
    "metadata": {},
    "outputs": [],
@@ -14,19 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "ef60047e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/maria/anaconda3/envs/myenv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "import torch\n",
@@ -45,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "23dda31a",
    "metadata": {},
    "outputs": [
@@ -53,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 201 examples.\n"
+      "Loaded 200 examples.\n"
      ]
     }
    ],
@@ -74,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "7e840f43",
    "metadata": {},
    "outputs": [
@@ -82,8 +73,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 2 files: 100%|██████████| 2/2 [01:28<00:00, 44.25s/it]\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:00<00:00, 33.61it/s]\n"
+      "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:00<00:00, 28.27it/s]\n"
      ]
     },
     {
@@ -112,17 +109,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6f7ce506",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating...:   0%|          | 1/200 [00:00<02:59,  1.11it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "First Example:\n",
+      "Question: There are some cats on the roof. Before the weaver begins assembling the garment, she carefully checks her inventory to avoid any surprises during production. A robe takes 10 bolts of blue fiber and half that much white fiber. How many bolts in total does it take? After finding the result, she notes it down to order supplies for next week.\n",
+      "Expected (gold): 15\n",
+      "Predicted: 40\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating...: 100%|██████████| 200/200 [02:38<00:00,  1.26it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Correct predictions: 13/200\n",
+      "Accuracy on dataset 2: 6.50%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "correct = 0\n",
     "first_printed = False\n",
     "\n",
     "for item in tqdm(dataset, desc=\"Evaluating...\"):\n",
     "    question = item[\"question\"].strip()\n",
-    "    gold = str(item[\"gold_num\"])\n",
+    "    gold = str(item[\"gold_number\"])\n",
     "\n",
     "    # Zero-shot prompt \n",
     "    prompt = question + \"\\nA:\"\n",
@@ -149,7 +188,7 @@
     "accuracy = correct / total * 100\n",
     "\n",
     "print(f\"\\nCorrect predictions: {correct}/{total}\")\n",
-    "print(f\"Accuracy on dataset (zero-shot): {accuracy:.2f}%\")\n"
+    "print(f\"Accuracy on dataset 2: {accuracy:.2f}%\")\n"
    ]
   }
  ],
