--- a/phiModel/phiRerunWithJsonFile1.ipynb
+++ b/phiModel/phiRerunWithJsonFile1.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "9b18d0af",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "f6983c6a",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "cc6a20b5",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "fae22477",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "0b42ad46",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 266/266 [00:00<00:00, 11142.92 examples/s]\n"
+      "Map:   0%|          | 0/266 [00:00<?, ? examples/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 266/266 [00:00<00:00, 9518.36 examples/s]\n"
      ]
     }
    ],
@@ -188,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "b66f9df7",
    "metadata": {},
    "outputs": [],
@@ -215,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "f70cc9bc",
    "metadata": {},
    "outputs": [
@@ -223,7 +230,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_800687/2810881546.py:4: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "/tmp/ipykernel_823902/2810881546.py:4: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
       "  trainer = Trainer(\n",
       "Detected kernel version 5.4.0, which is below the recommended minimum of 5.5.0; this can cause the process to hang. It is recommended to upgrade the kernel to the minimum version or higher.\n"
      ]
@@ -262,10 +269,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=198, training_loss=1.6491286537863992, metrics={'train_runtime': 115.4904, 'train_samples_per_second': 6.91, 'train_steps_per_second': 1.714, 'total_flos': 794856605614080.0, 'train_loss': 1.6491286537863992, 'epoch': 2.962406015037594})"
+       "TrainOutput(global_step=198, training_loss=1.6491286537863992, metrics={'train_runtime': 115.1934, 'train_samples_per_second': 6.927, 'train_steps_per_second': 1.719, 'total_flos': 794856605614080.0, 'train_loss': 1.6491286537863992, 'epoch': 2.962406015037594})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "43319cb3",
    "metadata": {},
    "outputs": [
@@ -316,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "6a9d9c55",
    "metadata": {},
    "outputs": [
@@ -324,12 +331,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "model-00002-of-00002.safetensors:   0%|          | 0.00/688M [00:00<?, ?B/s]\n",
-      "model-00002-of-00002.safetensors: 100%|██████████| 688M/688M [00:23<00:00, 29.0MB/s] \n",
-      "\n",
-      "model-00001-of-00002.safetensors: 100%|██████████| 4.98G/4.98G [02:27<00:00, 33.8MB/s]\n",
-      "\n",
-      "Upload 2 LFS files: 100%|██████████| 2/2 [02:27<00:00, 73.89s/it]\n"
+      "No files have been modified since last commit. Skipping to prevent empty commit.\n",
+      "No files have been modified since last commit. Skipping to prevent empty commit.\n"
      ]
     },
     {
@@ -356,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "7cf3c501",
    "metadata": {},
    "outputs": [
@@ -364,7 +367,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:00<00:00, 29.06it/s]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:00<00:00, 31.74it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -398,7 +408,7 @@
        ")"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fe073877",
    "metadata": {},
    "outputs": [
@@ -427,7 +437,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating fine-tuned model (zero-shot)...:   0%|          | 1/266 [00:00<03:30,  1.26it/s]"
+      "Evaluating fine-tuned model (zero-shot)...:   0%|          | 1/266 [00:00<03:25,  1.29it/s]"
      ]
     },
     {
@@ -445,7 +455,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating fine-tuned model (zero-shot)...: 100%|██████████| 266/266 [03:26<00:00,  1.29it/s]"
+      "Evaluating fine-tuned model (zero-shot)...: 100%|██████████| 266/266 [03:30<00:00,  1.27it/s]"
      ]
     },
     {
@@ -454,7 +464,7 @@
      "text": [
       "\n",
       "Correct predictions: 24/266\n",
-      "Accuracy of fine-tuned Phi model (zero-shot): 9.02%\n"
+      "Accuracy on dataset 1: 9.02%\n"
      ]
     },
     {
@@ -497,7 +507,7 @@
     "accuracy = correct / total * 100\n",
     "\n",
     "print(f\"\\nCorrect predictions: {correct}/{total}\")\n",
-    "print(f\"Accuracy on dataset that was (few shot): {accuracy:.2f}%\")"
+    "print(f\"Accuracy on dataset 1: {accuracy:.2f}%\")"
    ]
   }
  ],
