--- a/phiModel/phi.ipynb
+++ b/phiModel/phi.ipynb
@@ -4,11 +4,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "This code is doing: The objective is to fine-tune a model and evaluate its performance on normal and chain-of-thought (COT) predictions.\n",
         "\n",
         "1. Install packages\n",
         "2. Import libraries\n",
-        "3. Load Phi-3\n",
+        "3. Load Phi-1.5\n",
         "4. Manually preprocess with mask -100\n",
         "5. Tokenize training and validation sets\n",
         "6. Define TrainingArguments and Trainer\n",
@@ -18,9 +17,7 @@
         "10. Make normal predictions\n",
         "11. Make chain-of-thought (COT) predictions\n",
         "12. Save predictions to a .json file\n",
-        "13. Extract subsets with 100% correct predictions\n",
-        "\n",
-        "Tu código en phi.ipynb realiza el fine-tuning del modelo phi usando un dataset modificado, y luego genera predicciones en dos modalidades: zero-shot (sin ejemplos ni razonamiento en el prompt) y few-shot con chain-of-thought (usando ejemplos y razonamiento). Sin embargo, todas esas predicciones se hacen con el modelo fine-tuned, y en ningún momento se evalúa el modelo base original (microsoft/phi-1_5) sin entrenamiento adicional, lo cual es necesario para comparar mejoras en desempeño."
+        "13. Extract subsets with 100% correct predictions"
       ]
     },
     {
@@ -134,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -210,12 +207,12 @@
         }
       ],
       "source": [
-        "# 1. Load & split GSM8K\n",
+        "# 1. Load and split GSM8K\n",
         "gsm8k     = load_dataset(\"gsm8k\", \"main\")\n",
         "train_val = gsm8k[\"train\"].shuffle(seed=42)\n",
-        "test_data = gsm8k[\"test\"]                   # Official held-out test split\n",
+        "test_data = gsm8k[\"test\"]                   \n",
         "\n",
-        "# 80/10 split of train_val - train / val\n",
+        "# 80-10 split of train_val\n",
         "val_size      = int(0.1 * len(train_val))\n",
         "split         = train_val.train_test_split(test_size=val_size, seed=42)\n",
         "train_data    = split[\"train\"]\n",
@@ -341,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -393,7 +390,7 @@
         "        # mask the prompt tokens\n",
         "        prompt_len = len(tokenizer(prompt)[\"input_ids\"])\n",
         "        label = [-100] * prompt_len + tok_full[\"input_ids\"][prompt_len:]\n",
-        "        # pad the rest of the labels to max_length\n",
+        "        \n",
         "        label = label + [-100] * (max_length - len(label))\n",
         "\n",
         "        input_ids.append(tok_full[\"input_ids\"])\n",
@@ -442,7 +439,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -746,8 +743,6 @@
         "\n",
         "\n",
         "#  TrainingArguments & Trainer\n",
-        "# how often (in steps) to run eval & checkpoint\n",
-        "# here: once every 1 000 optimization steps\n",
         "training_args = TrainingArguments(\n",
         "    output_dir=\"./results_phi\",\n",
         "    num_train_epochs=3,\n",
@@ -763,8 +758,8 @@
         "    save_total_limit=2,\n",
         "    fp16= True,\n",
         "    torch_compile=False,\n",
-        "    report_to=[],            # -  turn off W&B (and all other loggers)\n",
-        "    run_name=\"gsm8k-finetune-phi\" # - optional, avoids duplicate-name warnings\n",
+        "    report_to=[],           \n",
+        "    run_name=\"gsm8k-finetune-phi\" \n",
         ")\n",
         "\n",
         "trainer = Trainer(\n",
@@ -773,7 +768,7 @@
         "    train_dataset=tokenized_train,\n",
         "    eval_dataset=tokenized_val,\n",
         "    data_collator=data_collator,\n",
-        "    # tokenizer=tokenizer   you can drop this now to silence the deprecation warning\n",
+        "    # tokenizer=tokenizer   \n",
         ")\n",
         "\n",
         "\n",
@@ -797,7 +792,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -848,7 +843,6 @@
         "from tqdm.auto import tqdm\n",
         "\n",
         "def extract_number(s):\n",
-        "    # grab the *last* integer or decimal in the string\n",
         "    nums = re.findall(r\"-?\\d+\\.?\\d*\", s)\n",
         "    return nums[-1] if nums else None\n",
         "\n",
@@ -857,7 +851,6 @@
         "    q, gold = ex[\"question\"], ex[\"answer\"].strip()\n",
         "    prompt = f\"Q: {q}\\nA:\"\n",
         "\n",
-        "    #tokenize and move tensors to device\n",
         "    inputs = tokenizer(\n",
         "        prompt,\n",
         "        return_tensors=\"pt\",\n",
@@ -904,7 +897,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -924,7 +917,7 @@
       "source": [
         "import json\n",
         "\n",
-        "# all_results = your list of dicts from the loop above\n",
+        "\n",
         "with open(\"all_predictions_phi.json\", \"w\") as f:\n",
         "    json.dump(results, f, indent=2)\n",
         "\n",
@@ -953,7 +946,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1167,7 +1160,7 @@
         "from tqdm.auto import tqdm\n",
         "\n",
         "def extract_number(s):\n",
-        "    # grab the *last* integer or decimal in the string\n",
+        "    \n",
         "    nums = re.findall(r\"-?\\d+\\.?\\d*\", s)\n",
         "    return nums[-1] if nums else None\n",
         "\n",
@@ -1194,7 +1187,7 @@
         "\n",
         "    text = tokenizer.decode(out[0], skip_special_tokens=True)\n",
         "\n",
-        "    # DEBUG: print first few to see the format\n",
+        "    \n",
         "    if i < 5:\n",
         "        print(\"––––––––––––––––––\")\n",
         "        print(text)\n",
@@ -1202,7 +1195,7 @@
         "        print(\"extracted:\", extract_number(text))\n",
         "        print(\"––––––––––––––––––\\n\")\n",
         "\n",
-        "    # now extract the final numeric answer from the full CoT text\n",
+        "    \n",
         "    pred_num = extract_number(text)\n",
         "\n",
         "    correct = (pred_num == gold_num)\n",
@@ -1226,7 +1219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1246,7 +1239,7 @@
       "source": [
         "import json\n",
         "\n",
-        "# all_results = your list of dicts from the loop above\n",
+        "\n",
         "with open(\"all_predictions_zeroCOT_phi.json\", \"w\") as f:\n",
         "    json.dump(cot_results, f, indent=2)\n",
         "\n",
