--- a/phiModel/phiNofinetune.ipynb
+++ b/phiModel/phiNofinetune.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4ba19b4a",
    "metadata": {},
    "outputs": [
@@ -136,53 +136,45 @@
     "import re\n",
     "from tqdm import tqdm\n",
     "\n",
-    "# Load the tokenizer and the base Phi model (not fine-tuned)\n",
+    "# Load the tokenizer and the base Phi model \n",
     "tokenizer = AutoTokenizer.from_pretrained(\"microsoft/phi-1_5\")\n",
     "model = AutoModelForCausalLM.from_pretrained(\"microsoft/phi-1_5\")\n",
-    "\n",
-    "# Set the model to evaluation mode and move it to GPU if available\n",
     "model.eval().to(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "# Load the official GSM8K test set (1,319 examples)\n",
+    "# Load GSM8K test set \n",
     "gsm8k = load_dataset(\"gsm8k\", \"main\", split=\"test\")\n",
-    "\n",
-    "# Print how many test examples are being evaluated\n",
     "print(f\"GSM8K test set size: {len(gsm8k)} examples\")\n",
     "\n",
-    "# Initialize counter for correct predictions\n",
     "correct = 0\n",
-    "\n",
-    "# Boolean flag to track whether we’ve printed the first example\n",
     "first_printed = False\n",
     "\n",
     "# Loop through each example in the dataset\n",
     "for item in tqdm(gsm8k, desc=\"Evaluating base Phi model (zero-shot)...\"):\n",
     "    \n",
-    "    # Extract the question and strip any whitespace\n",
+    "    \n",
     "    question = item[\"question\"].strip()\n",
     "\n",
     "    # Use regular expressions to extract numbers from the gold answer\n",
-    "    # Take the last number found as the final numeric answer\n",
     "    gold_answer = re.findall(r\"\\d+\", item[\"answer\"])\n",
     "    gold = gold_answer[-1] if gold_answer else None\n",
     "\n",
-    "    # Build the zero-shot prompt (no examples, no reasoning, just the question)\n",
+    "    \n",
     "    prompt = question + \"\\nA:\"\n",
     "    \n",
-    "    # Tokenize the prompt and move it to the model's device (CPU or GPU)\n",
+    "   \n",
     "    inputs = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
     "\n",
-    "    # Use the model to generate a prediction, limiting the output length\n",
+    "    # Use the model to generate a prediction\n",
     "    with torch.no_grad():\n",
     "        outputs = model.generate(**inputs, max_new_tokens=50)\n",
     "        decoded = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
     "\n",
-    "    # Extract any numbers from the model’s output\n",
-    "    # Take the last number found as the model's predicted answer\n",
+    "   \n",
+    "    # Take last number found as predicted answer\n",
     "    pred_numbers = re.findall(r\"\\d+\", decoded)\n",
     "    prediction = pred_numbers[-1] if pred_numbers else None\n",
     "\n",
-    "    # For the first example only, print the full comparison\n",
+    "    \n",
     "    if not first_printed:\n",
     "        print(\"\\nFirst Example:\")\n",
     "        print(f\"Question: {question}\")\n",
@@ -200,14 +192,6 @@
     "print(f\"\\nCorrect predictions: {correct}/{total}\")\n",
     "print(f\"Accuracy of base Phi model (zero-shot): {accuracy:.2f}%\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52066cd9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
