--- a/phiModel/phiRerunWithJsonFile1.ipynb
+++ b/phiModel/phiRerunWithJsonFile1.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fae22477",
    "metadata": {},
    "outputs": [
@@ -130,10 +130,10 @@
    "source": [
     "def load_modified_dataset(file_path):\n",
     "    with open(file_path, \"r\") as f:\n",
-    "        data = json.load(f)  # This expects a list of dicts\n",
+    "        data = json.load(f)  \n",
     "    return data\n",
     "\n",
-    "modified_data = load_modified_dataset(\"perfect_subset_zoroCOT_phi.json\")  # Replace with your actual file name\n",
+    "modified_data = load_modified_dataset(\"perfect_subset_zoroCOT_phi.json\")  \n",
     "print(f\"Loaded {len(modified_data)} examples.\")"
    ]
   },
