--- a/gpt2BaseModel/Finalgpt2.ipynb
+++ b/gpt2BaseModel/Finalgpt2.ipynb
@@ -299,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -457,18 +457,18 @@
         }
       ],
       "source": [
-        "# 1. Load & split GSM8K\n",
+        "# 1. Load and split GSM8K\n",
         "gsm8k     = load_dataset(\"gsm8k\", \"main\")\n",
         "train_val = gsm8k[\"train\"].shuffle(seed=42)\n",
-        "test_data = gsm8k[\"test\"]                   # Official held-out test split\n",
+        "test_data = gsm8k[\"test\"]                   \n",
         "\n",
-        "# 80/10 split of train_val → train / val\n",
+        "# 80-10 split of train_val\n",
         "val_size      = int(0.1 * len(train_val))\n",
         "split         = train_val.train_test_split(test_size=val_size, seed=42)\n",
         "train_data    = split[\"train\"]\n",
         "val_data      = split[\"test\"]\n",
         "\n",
-        "print(f\"→ Train: {len(train_data)}, Val: {len(val_data)}, Test: {len(test_data)}\")"
+        "print(f\"Train: {len(train_data)}, Val: {len(val_data)}, Test: {len(test_data)}\")"
       ]
     },
     {
@@ -686,7 +686,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -762,10 +762,10 @@
         "            padding=\"max_length\",\n",
         "            max_length=max_length,\n",
         "        )\n",
-        "        # mask the prompt tokens\n",
+        "        \n",
         "        prompt_len = len(tokenizer(prompt)[\"input_ids\"])\n",
         "        label = [-100] * prompt_len + tok_full[\"input_ids\"][prompt_len:]\n",
-        "        # pad the rest of the labels to max_length\n",
+        "        \n",
         "        label = label + [-100] * (max_length - len(label))\n",
         "\n",
         "        input_ids.append(tok_full[\"input_ids\"])\n",
@@ -816,189 +816,9 @@
         "id": "9tYo25LD5iaZ",
         "outputId": "9466a578-b20d-41a3-b85d-d4c8a777b4d2"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "🚀 Starting fine-tuning…\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "`loss_type=None` was set in the config but it is unrecognised.Using the default loss: `ForCausalLMLoss`.\n"
-          ]
-        },
-        {
-          "data": {
-            "text/html": [
-              "\n",
-              "    <div>\n",
-              "      \n",
-              "      <progress value='2523' max='2523' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [2523/2523 12:15, Epoch 3/3]\n",
-              "    </div>\n",
-              "    <table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              " <tr style=\"text-align: left;\">\n",
-              "      <th>Step</th>\n",
-              "      <th>Training Loss</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <td>100</td>\n",
-              "      <td>2.859900</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>200</td>\n",
-              "      <td>2.147800</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>300</td>\n",
-              "      <td>1.930000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>400</td>\n",
-              "      <td>1.852300</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>500</td>\n",
-              "      <td>1.802800</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>600</td>\n",
-              "      <td>1.765700</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>700</td>\n",
-              "      <td>1.717200</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>800</td>\n",
-              "      <td>1.677200</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>900</td>\n",
-              "      <td>1.613300</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>1000</td>\n",
-              "      <td>1.580400</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>1100</td>\n",
-              "      <td>1.572900</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>1200</td>\n",
-              "      <td>1.550100</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>1300</td>\n",
-              "      <td>1.532600</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>1400</td>\n",
-              "      <td>1.536100</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>1500</td>\n",
-              "      <td>1.504600</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>1600</td>\n",
-              "      <td>1.511800</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>1700</td>\n",
-              "      <td>1.503300</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>1800</td>\n",
-              "      <td>1.446400</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>1900</td>\n",
-              "      <td>1.418100</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>2000</td>\n",
-              "      <td>1.440100</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>2100</td>\n",
-              "      <td>1.417200</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>2200</td>\n",
-              "      <td>1.418500</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>2300</td>\n",
-              "      <td>1.424800</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>2400</td>\n",
-              "      <td>1.433600</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>2500</td>\n",
-              "      <td>1.431300</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table><p>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/plain": [
-              "GPT2LMHeadModel(\n",
-              "  (transformer): GPT2Model(\n",
-              "    (wte): Embedding(50257, 768)\n",
-              "    (wpe): Embedding(1024, 768)\n",
-              "    (drop): Dropout(p=0.1, inplace=False)\n",
-              "    (h): ModuleList(\n",
-              "      (0-11): 12 x GPT2Block(\n",
-              "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-              "        (attn): GPT2Attention(\n",
-              "          (c_attn): Conv1D(nf=2304, nx=768)\n",
-              "          (c_proj): Conv1D(nf=768, nx=768)\n",
-              "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
-              "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
-              "        )\n",
-              "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-              "        (mlp): GPT2MLP(\n",
-              "          (c_fc): Conv1D(nf=3072, nx=768)\n",
-              "          (c_proj): Conv1D(nf=768, nx=3072)\n",
-              "          (act): NewGELUActivation()\n",
-              "          (dropout): Dropout(p=0.1, inplace=False)\n",
-              "        )\n",
-              "      )\n",
-              "    )\n",
-              "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-              "  )\n",
-              "  (lm_head): Linear(in_features=768, out_features=50257, bias=False)\n",
-              ")"
-            ]
-          },
-          "execution_count": 11,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# 5. TrainingArguments & Trainer\n",
-        "# how often (in steps) to run eval & checkpoint\n",
-        "# here: once every 1 000 optimization steps\n",
         "training_args = TrainingArguments(\n",
         "    output_dir=\"./gpt2-gsm8k-finetuned\",\n",
         "    num_train_epochs=3,\n",
@@ -1013,8 +833,8 @@
         "    eval_steps=1000,\n",
         "    save_total_limit=2,\n",
         "    fp16=torch.cuda.is_available(),\n",
-        "    report_to=[],            # ← turn off W&B (and all other loggers)\n",
-        "    run_name=\"gsm8k-finetune\" # ← optional, avoids duplicate-name warnings\n",
+        "    report_to=[],           \n",
+        "    run_name=\"gsm8k-finetune\" \n",
         ")\n",
         "\n",
         "trainer = Trainer(\n",
@@ -1023,7 +843,7 @@
         "    train_dataset=tokenized_train,\n",
         "    eval_dataset=tokenized_val,\n",
         "    data_collator=data_collator,\n",
-        "    # tokenizer=tokenizer   ← you can drop this now to silence the deprecation warning\n",
+        "    # tokenizer=tokenizer   \n",
         ")\n",
         "\n",
         "\n",
@@ -1091,7 +911,6 @@
         "from tqdm.auto import tqdm\n",
         "\n",
         "def extract_number(s):\n",
-        "    # grab the *last* integer or decimal in the string\n",
         "    nums = re.findall(r\"-?\\d+\\.?\\d*\", s)\n",
         "    return nums[-1] if nums else None\n",
         "\n",
@@ -1132,7 +951,7 @@
         "\n",
         "baseline_df  = pd.DataFrame(results)\n",
         "baseline_acc = baseline_df[\"correct\"].mean()\n",
-        "print(f\"▶︎ Baseline numeric-only accuracy: {baseline_acc:.3%}\")\n"
+        "print(f\"Baseline numeric-only accuracy: {baseline_acc:.3%}\")\n"
       ]
     },
     {
@@ -1157,7 +976,7 @@
       "source": [
         "import json\n",
         "\n",
-        "# all_results = your list of dicts from the loop above\n",
+        "\n",
         "with open(\"all_predictions.json\", \"w\") as f:\n",
         "    json.dump(results, f, indent=2)\n",
         "\n",
@@ -1179,7 +998,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1345,7 +1164,7 @@
         "from tqdm.auto import tqdm\n",
         "\n",
         "def extract_number(s):\n",
-        "    # grab the *last* integer or decimal in the string\n",
+        "\n",
         "    nums = re.findall(r\"-?\\d+\\.?\\d*\", s)\n",
         "    return nums[-1] if nums else None\n",
         "\n",
@@ -1392,12 +1211,12 @@
         "    })\n",
         "\n",
         "cot_acc = sum(r[\"correct\"] for r in cot_results) / len(cot_results)\n",
-        "print(f\"▶︎ CoT zero-shot numeric accuracy: {cot_acc:.3%}\")\n"
+        "print(f\"CoT zero-shot numeric accuracy: {cot_acc:.3%}\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1417,7 +1236,6 @@
       "source": [
         "import json\n",
         "\n",
-        "# all_results = your list of dicts from the loop above\n",
         "with open(\"all_predictions_zeroCOT.json\", \"w\") as f:\n",
         "    json.dump(cot_results, f, indent=2)\n",
         "\n",
